test_log.log
   Compiling plonkish_backend v0.1.0 (/Users/ak36/Desktop/bunz/plonkish/plonkish_backend)
error[E0599]: no method named `synthesize` found for struct `BaseCircuitBuilder` in the current scope
    --> plonkish_backend/src/accumulation/protostar/ivc/halo2.rs:1420:20
     |
1420 |         self.inner.synthesize(config, layouter);
     |                    ^^^^^^^^^^ method not found in `BaseCircuitBuilder<<C as CurveAffine>::ScalarExt>`
     |
    ::: /Users/ak36/Desktop/axiom/halo2/halo2_proofs/src/plonk/circuit.rs:791:8
     |
791  |     fn synthesize(&self, config: Self::Config, layouter: impl Layouter<F>) -> Result<(), Error>;
     |        ---------- the method is available for `BaseCircuitBuilder<<C as CurveAffine>::ScalarExt>` here
     |
     = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
     |
1    + use halo2_base::halo2_proofs::plonk::Circuit;
     |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `plonkish_backend` (lib test) due to previous error
